# Initial-Language-Model

./: .gitignore  data_extract.py  gpt1.ipynb  main.ipynb  main.py  pyproject.toml
