[project]
name = "fcc-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "intel-extension-for-pytorch==2.8.10+xpu",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch==2.8.0",
    "torchvision==0.23.0",
]
